--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.13"
   },
   "name": "your-project-name",
   "version": "1.0.0",
